--- a/plugin.xml
+++ b/plugin.xml
@@ -228,6 +228,6 @@
           </array>
         </config-file>
 
-        <dependency id="com.googlemaps.ios" url="https://github.com/totalpave/cordova-plugin-googlemaps-sdk" branch="tp"  />
+        <dependency id="com.googlemaps.ios" url="https://github.com/totalpave/cordova-plugin-googlemaps-sdk" branch="master"  />
     </platform>
 </plugin>
