Renamed Polyline to GMapsPolyline, for iOS 11 fix.

--- a/plugin.xml
+++ b/plugin.xml
@@ -141,8 +141,8 @@
             <feature name="Polygon">
                 <param name="ios-package" value="Polygon" />
             </feature>
-            <feature name="Polyline">
-                <param name="ios-package" value="Polyline" />
+            <feature name="GmapsPolyline">
+                <param name="ios-package" value="GmapsPolyline" />
             </feature>
             <feature name="TileOverlay">
                 <param name="ios-package" value="TileOverlay" />
