Added GoogleMaps pod at version 5.2.0

--- a/plugin.xml
+++ b/plugin.xml
@@ -457,7 +457,16 @@
       </array>
     </config-file>
 
-    <dependency id="com.googlemaps.ios" url="https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk"  />
+    <!-- <dependency id="com.googlemaps.ios" url="https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk"  /> -->
+
+    <podspec>
+        <config>
+            <source url="https://github.com/CocoaPods/Specs.git"/>
+        </config>
+        <pods>
+          <pod name="GoogleMaps" version="5.2.0" />
+        </pods>
+    </podspec>
 
 <!--
     <hook type="before_platform_add" src="src/ios/check_sdk_version.js"/>
