--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
   "homepage": "https://github.com/mapsplugin/cordova-plugin-googlemaps",
   "devDependencies": {
     "cordova-js": "^4.2.4",
-    "eslint": "^5.7.0",
-    "jest": "^23.6.0"
+    "eslint": "^8.8.0",
+    "jest": "^27.5.1",
+    "jest-circus": "^27.5.1"
   },
   "dependencies": {
     "cordova-common": "^3.1.0"
