--- a/plugin.xml
+++ b/plugin.xml
@@ -26,6 +26,9 @@
   <js-module name="Polyline" src="www/Polyline.js">
     <runs/>
   </js-module>
+  <js-module name="TotalPaveTileLayer" src="www/TotalPaveTileLayer.js">
+    <runs/>
+  </js-module>
   <js-module name="Polygon" src="www/Polygon.js">
     <runs/>
   </js-module>
@@ -107,6 +110,9 @@
   <js-module name="InlineWorker" src="www/InlineWorker.js">
     <runs/>
   </js-module>
+
+  <!-- Provides SQLite binaries for libtilegen -->
+  <dependency id="@totalpave/cordova-plugin-libsqlite" version="0.0.2" />
 
   <description>You can display native Google Maps views in cordova application. Native Google Maps view is faster, powerful, and more friendly for mobile applications. You can control the native Google Maps view through this plugin API.
 
@@ -221,11 +227,15 @@
     <source-file src="src/android/plugin/google/maps/PluginMarkerCluster.java" target-dir="src/plugin/google/maps"/>
     <source-file src="src/android/plugin/google/maps/PluginStreetViewPanorama.java" target-dir="src/plugin/google/maps"/>
     <source-file src="src/android/plugin/google/maps/IPluginView.java" target-dir="src/plugin/google/maps"/>
+    <source-file src="src/android/plugin/google/maps/TotalPaveTileProvider.java" target-dir="src/plugin/google/maps"/>
+    <source-file src="src/android/plugin/google/maps/PluginTotalPaveTileLayer.java" target-dir="src/plugin/google/maps"/>
 
     <framework src="src/android/frameworks/tbxml-android.gradle" custom="true" type="gradleReference"/>
     <resource-file src="src/android/frameworks/tbxml-android.aar" target="libs/tbxml-android.aar"/>
     <resource-file src="src/android/frameworks/tbxml-android.aar" target="app/src/libs/tbxml-android.aar"/>
 
+    <framework src="src/android/frameworks/libtilegen.gradle" custom="true" type="gradleReference"/>
+    <resource-file src="src/android/frameworks/libtilegen.aar" target="libs/libtilegen.aar"/>
 
     <framework src="src/android/frameworks/pgm-custom.gradle" custom="true" type="gradleReference"/>
 
@@ -397,6 +407,34 @@
     <source-file src="src/ios/GoogleMaps/PluginViewController.m"/>
     <header-file src="src/ios/GoogleMaps/IPluginView.h"/>
     <header-file src="src/ios/GoogleMaps/IPluginProtocol.h"/>
+    <header-file src="src/ios/GoogleMaps/PluginTotalPaveTileLayer.h"/>
+    <source-file src="src/ios/GoogleMaps/PluginTotalPaveTileLayer.m"/>
+    <header-file src="src/ios/GoogleMaps/TotalPaveTileProvider.h"/>
+    <source-file src="src/ios/GoogleMaps/TotalPaveTileProvider.mm"/>
+
+    <!-- 
+      Runs into linker errors during build
+      <framework src="src/ios/frameworks/libtilegen.xcframework" custom="true" embed="true" />
+    
+      Runtime crash due to missing dylib file for physical devices. Simulator works fine.
+      Manually changing xcframework settings to embed allows everything to work.
+      <framework src="src/ios/frameworks/libtilegen.xcframework" custom="true"/>
+
+      So here is how we are installing libtilegen.xcframework.
+      Since the libtilegen.xcframework is in the plugin, it's copied to the plugins directory of the cordova project.
+      The install script copes libtilegen.xcframework from the plugins directory into the platforms directory.
+      The destination is the same destination we would get if we used the framework tag.
+
+      The install script then uses https://github.com/kronenthaler/mod-pbxproj to install the xcframework to the xcode project.
+      The uninstall script uninstalls the xcframework from the xcode project.
+
+      The reason why we need to do this is because of bad assumptions in the cordova framework.
+      As far as I could tell, there is no way for a plugin to have an xcframework be both embedded and linked to the binary. It's one or the other.
+      I don't know why this assumption is made considering the default behaviour of dragging and dropping an xcframework into XCode is to embed it and link it to the binary.
+      Either way, as described above, if the xcframework is not both embedded and linked there will be errors.
+    -->
+    <hook type="after_plugin_install" src="hooks/ios/install-libtilegen.py"/>
+    <hook type="before_plugin_uninstall" src="hooks/ios/uninstall-libtilegen.py"/>
 
     <!-- Base messages -->
     <resource-file src="src/ios/strings/pgm_Localizable_en.json" target="pgm_Localizable_en.json"/>
