Replaced libtilegen binaries with cordova-plugin-libtilegen. Updated cordova-plugin-libsqlite. Replaced cordova-common tgz with pinned version.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
-    "cordova-common": "file:cordova-common-4.0.3-dev.tgz"
+    "cordova-common": "4.1.0"
   }
 }
