--- a/plugin.xml
+++ b/plugin.xml
@@ -111,10 +111,6 @@
     <runs/>
   </js-module>
 
-  <!-- Provides SQLite binaries for libtilegen -->
-  <!-- TODO PIN this to a major version, e.g. 1.x when we build a final release -->
-  <dependency id="@totalpave/cordova-plugin-libsqlite" version="*" />
-
   <description>You can display native Google Maps views in cordova application. Native Google Maps view is faster, powerful, and more friendly for mobile applications. You can control the native Google Maps view through this plugin API.
 
   This plugin works in browser application as well. One code for Android, iOS, and browsers!
@@ -134,11 +130,10 @@
     <engine name="apple-ios" version=">=10.0.0" />
   </engines>
 
+  <dependency id="@totalpave/cordova-plugin-libtilegen" version="0.0.5" />
+
   <!-- android -->
   <platform name="android">
-    <!-- TODO PIN this to a major version, e.g. 1.x when we build a final release -->
-    <!-- Required by libtilegen -->
-    <dependency id="@totalpave/cordova-plugin-libcxx" version="*" />
     <info>
       Official document https://github.com/mapsplugin/cordova-plugin-googlemaps-doc/blob/master/v2.6.0/README.md Please consider to buy a beer for us 🍺 https://github.com/mapsplugin/cordova-plugin-googlemaps#buy-us-a-beer
     </info>
@@ -234,9 +229,6 @@
     <framework src="src/android/frameworks/tbxml-android.gradle" custom="true" type="gradleReference"/>
     <resource-file src="src/android/frameworks/tbxml-android.aar" target="libs/tbxml-android.aar"/>
     <resource-file src="src/android/frameworks/tbxml-android.aar" target="app/src/libs/tbxml-android.aar"/>
-
-    <framework src="src/android/frameworks/libtilegen.gradle" custom="true" type="gradleReference"/>
-    <resource-file src="src/android/frameworks/libtilegen.aar" target="libs/libtilegen.aar"/>
 
     <framework src="src/android/frameworks/pgm-custom.gradle" custom="true" type="gradleReference"/>
 
@@ -412,8 +404,6 @@
     <source-file src="src/ios/GoogleMaps/PluginTotalPaveTileLayer.m"/>
     <header-file src="src/ios/GoogleMaps/TotalPaveTileProvider.h"/>
     <source-file src="src/ios/GoogleMaps/TotalPaveTileProvider.mm"/>
-
-    <framework src="./src/ios/frameworks/libtilegen.xcframework" custom="true" embed="true" link="true" />
 
     <!-- Base messages -->
     <resource-file src="src/ios/strings/pgm_Localizable_en.json" target="pgm_Localizable_en.json"/>
