--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-googlemaps" version="3.0.4" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-googlemaps" version="3.1.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
   <name>cordova-plugin-googlemaps</name>
   <js-module name="Promise" src="www/Promise.js" />
   <js-module name="BaseClass" src="www/BaseClass.js">
@@ -130,7 +130,7 @@
     <engine name="apple-ios" version=">=10.0.0" />
   </engines>
 
-  <dependency id="@totalpave/cordova-plugin-libtilegen" version="0.0.6" />
+  <dependency id="@totalpave/cordova-plugin-libtilegen" version="0.0.8" />
 
   <!-- android -->
   <platform name="android">
@@ -471,7 +471,7 @@
             <source url="https://github.com/CocoaPods/Specs.git"/>
         </config>
         <pods>
-          <pod name="GoogleMaps" version="5.2.0" />
+          <pod name="GoogleMaps" spec="7.4.0" />
         </pods>
     </podspec>
 
